--- a/frontend/web/scss/07-pages/_article.scss
+++ b/frontend/web/scss/07-pages/_article.scss
@@ -1,6 +1,12 @@
 //ARTICLE FULL
 .article-full {
 
+  article {
+    @include breakpoint_custom($breakpoint-tablet) {
+      margin-bottom: 30px ;
+    }
+  }
+
   .content-inner-text {
 
     @include breakpoint_custom($breakpoint-tablet) {
